syntax = "proto3";

package users.v1;

import "users/v1/user.proto";
option go_package = "api/src/generated/users/v1";

service UsersService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc CreateAdminUser(CreateAdminUserRequest) returns (CreateAdminUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
}

message CreateUserRequest {
  string google_id = 1;
  string email = 2;
  string username = 3;
  string name = 4;
}

message CreateUserResponse {
  UserProto user = 1;
}

message CreateAdminUserRequest {
  string google_id = 1;
  string email = 2;
  string username = 3;
  string name = 4;
}

message CreateAdminUserResponse {
  UserProto user = 1;
}

message GetUserRequest {
  string id = 1; // UUIDv7 as string
}

message GetUserResponse {
  UserProto user = 1;
}

message UpdateUserRequest {
  string id = 1; // UUIDv7 as string
  string google_id = 2;
  string email = 3;
  string username = 4;
  string name = 5;
}

message UpdateUserResponse {
  UserProto user = 1;
}

message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

message ListUsersRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message ListUsersResponse {
  repeated UserProto users = 1;
  int32 total = 2;
  int32 page = 3;
  int32 page_size = 4;
}
